# ollama-with-mcp

./: .gitignore  ARCHITECTURE.md  DIRECTORY_STRUCTURE.md  High Level Architecture.txt  Project Plan.md  Proposed Phases or Milestones.md  README.md  Status.md  docker-compose.yml  hello.py
backend/: Dockerfile  pyproject.toml
backend/src/backend/: README.md  app.py  mcp_clients.py
backend/src/backend/llm/: ARCHITECTURE.md  README.md  orchestrator.py  orchestrator_backup_v1.py  orchestrator_backup_v2.py  prompt_templates.py  prompt_templates_backup_v1.py  schemas.py
backend/src/backend/mcp/: README.md  manager.py
backend/src/backend/models/: README.md
backend/src/backend/routers/: ARCHITECTURE.md  README,md  README.md  chat.py  datetime.py  geocoding.py  search.py  weather.py
backend/src/backend/services/: chat_service.py  ollama_service.py
backend/src/backend/tests/: test_chat.py  test_chat_mocked.py  test_health.py  test_searchxng_mcp.py
frontend/: .gitignore  Dockerfile  pyproject.toml
frontend/src/gradio_api/: README.md  app.py
mcp-servers/: README.md
mcp-servers/datetime/: Dockerfile  pyproject.toml  server.py  tool.py
mcp-servers/datetime/datetime_mcp/: server.py  tool.py
mcp-servers/ddgs/: Dockerfile  README.md  pyproject.toml
mcp-servers/ddgs/ddgs_mcp/: server.py  tool.py
mcp-servers/geocoding/: Dockerfile  README copy.md  README.md  pyproject.toml
mcp-servers/geocoding/geocoding_mcp/: mcp_clients.py  mcp_clients_backup_without_referrer_or_rate_limiting.py  server.py  tool.py
mcp-servers/geocoding/tests/: test_client.py
mcp-servers/searchxng/: Dockerfile  pyproject.toml
mcp-servers/searchxng/searchxng_mcp/: server.py  tool.py
mcp-servers/searchxng/searchxng_mcp/tests/: test_tool.py
mcp-servers/weather/: Dockerfile  README.md  pyproject.toml
mcp-servers/weather/weather_mcp/: README.md  mcp_clients.py  server.py  tool.py  tool_backup_01.py  tool_backup_02.py
searchxng_svc/: .gitignore  Dockerfile  limiter.toml  settings copy 1.yml  settings copy.yml  settings.yml
