[project]
name = "backend"
version = "0.1.0"
description = "Backend service for Ollama + MCP project"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.122.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "fastmcp>=2.13.1,<3.0"   # <-- add this
]

# ✨ Development / test dependencies
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0"   # optional, for testing async endpoints
]

# ✨ UV configuration
[tool.uv]
package = true
default-groups = ["dev"]

# ✨ Optional: if your backend code is in src/backend
[tool.uv.sources]
backend = { path = "src/backend" }
