[project]
name = "searchxng-mcp"
version = "0.1.0"
description = "MCP server wrapper for SearchXNG"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastmcp>=2.13.1,<3.0",
    "httpx>=0.27.0"
]

# ✨ This is the correct location for the dev dependency group definition.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23"
]

# ✨ This section is used for general `uv` configuration.
[tool.uv]
package = true
default-groups = ["dev"]

# ✨ This section tells `uv` where to find the package source.
[tool.uv.sources]
searchxng-mcp = { path = "searchxng_mcp" }
