[project]
name = "weather-mcp"
version = "0.1.0"
description = "Weather MCP server"
readme = "README.md"
requires-python = ">=3.12"

# Runtime dependencies
dependencies = [
    "fastmcp>=2.11.0",
    #"httpx>=0.24.1,<1.0.0"  # Uncomment if you integrate real API calls later
]

# Development / test dependencies (optional)
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio"
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
